@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1824 2003/12/05 05:25:55 jonnymind Exp $
+ * $Id: ChangeLog,v 1.1825 2003/12/05 05:47:12 mlombardo Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-05 19:04 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * include/thread.h
+  * source/vm/dynsym.c
+  * source/vm/thread.c
+    ! Added locked management of dynsyms with hb_dynsymMutex. This pairs with
+      recording of last best hit of dynsym name in the current VM stack.
+
+  * tests/mtstress.prg
+    * Nicer visualization of "mute" (maximum contention) tests.
+    
 
 2003-12-05 03:30 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
   * source/rtl/gtnul/gtnul.c
